--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ashwani-luhaniwal/es6-to-es5-using-babel#readme",
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
   }
